--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,14 @@
   "dependencies": {
     "aws-sdk": "^2.1589.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csrf": "^3.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.2.0",
-    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.5.1",
+    "express-session": "^1.18.2",
+    "helmet": "^7.2.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "kanoonwise-fullstack": "file:..",
